--- a/public/main.css
+++ b/public/main.css
@@ -35,3 +35,11 @@ body {
     background: url('images/watermelon.png');
     cursor: pointer;
 }
+
+.reward {
+    font-size: 22px;
+    text-align: center;
+    border: 1px solid lightgreen;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
